fix: all buttons same colore, hover colore and trandsition. smal alignment fix: text submit button index.css.

--- a/public/css/alwaysactive.css
+++ b/public/css/alwaysactive.css
@@ -33,5 +33,6 @@ button, input[type="button"] {
 }
 
 button:hover, input[type="button"]:hover {
-    background-color: #2a9640;
+    background-color: #4a8c3f;
+    transition: 0.4s;
 }
