--- a/public/css/game.css
+++ b/public/css/game.css
@@ -49,7 +49,7 @@ img {
 }
 
 .cards img {
-    width: 38px;
+    width: 35%;
     max-width: 100px;
     height: auto;
 }
@@ -195,12 +195,12 @@ img {
         font-size: 140%;
     }
 
-    #controls input[type=range] {
-        width: 160px;
+    .cards img{
+        min-width: 50px;
     }
 
-    .cards img {
-        width: 70px;
+    #controls input[type=range] {
+        width: 160px;
     }
 }
 
@@ -223,24 +223,13 @@ img {
     }
 
     .cards {
-        flex-direction: column;
-        align-items: center;
-        gap: 8px;
+        gap: 5px;
+        width: 50px;
+        hight: auto;
     }
 
     .cards img {
         width: 50px;
-    }
-
-    .community-cards {
-        flex-wrap: wrap;
-        gap: 6px;
-        display: none;
-    }
-
-    .community-cards img {
-        width: 40px;
-        display: none;
     }
 
     .infobar {
@@ -260,8 +249,7 @@ img {
         width: 140px;
     }
 
-    .cards img,
-    .community-cards img {
+    #cards1 {
         display: none;
     }
 
