--- a/public/css/index.css
+++ b/public/css/index.css
@@ -74,12 +74,15 @@ h1 {
 /* Button Styling */
 #lobbyDiv button {
   padding: 14px 16px; /* vorher 12px oder weniger */
-  background-color: #2aaa43;
+  background-color: #1e3b17;
   color: #fff;
   border: none;
   border-radius: 8px;
   font-size: 1em;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: background-color 0.3s ease;
   width: 100%;
   margin-top: 10px; 
@@ -89,6 +92,7 @@ h1 {
 
 #lobbyDiv button:hover {
   background-color: #4a8c3f;
+  transition: background-color 0.4s ease;
 }
 
 /* Optional Shadow on Hover for All Inner Elements */
